# forge

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  THIRD-PARTY-LICENSE
.github/workflows/: docker.yml  macos.yml  ubuntu.yml
docs/: README.md
src/: CMakeLists.txt  cli.cc  cli.h  main.cc
src/fasta/: CMakeLists.txt  block.cc  block.h  blockcontainer.cc  blockcontainer.h  blockreference.cc  blockreference.h  containermanager.cc  containermanager.h  faidx.cc  faidx.h  fasta.cc  fasta.h  fastareader.cc  fastareader.h  indexformat.cc  indexformat.h
src/fastq/: CMakeLists.txt  fastqwriter.cc  fastqwriter.h
src/shortread/: CMakeLists.txt  shortread.cc  shortread.h
src/sim/: CMakeLists.txt  approxvariation.cc  approxvariation.h  arrangement.cc  arrangement.h  arrangementcontainer.cc  arrangementcontainer.h  baseerror.cc  baseerror.h  bin.cc  bin.h  blockreference.cc  blockreference.h  complexsvparser.cc  complexsvparser.h  config.cc  config.h  fastawriter.cc  fastawriter.h  fastqwriter.cc  fastqwriter.h  referencebin.cc  referencebin.h  referencecontainer.cc  referencecontainer.h  referencecontainerhandler.cc  referencecontainerhandler.h  seqmod.cc  seqmod.h  sim.cc  sim.h  tranformseq.cc  tranformseq.h  variant.cc  variant.h  variantbin.cc  variantbin.h  variantbinhandler.cc  variantbinhandler.h  variantblock.cc  (+13 more)
src/variant/: CMakeLists.txt  reference.cc  reference.h  region.cc  region.h  variant.cc  variant.h
src/vcf/: CMakeLists.txt  dataline.cc  dataline.h  infofield.cc  infofield.h  metainfoline.cc  metainfoline.h  vcf.cc  vcf.h  vcfwriter.cc  vcfwriter.h  writer.cc  writer.h
templates/: config.yaml  custom.yaml
test/: CMakeLists.txt
test/data/: reference.fa  reference.fa.fai
test/fasta/: CMakeLists.txt  tests.cc
test/sim/: CMakeLists.txt  tests.cc
test/vcf/: CMakeLists.txt  tests.cc
