cmake_minimum_required(VERSION 3.9 FATAL_ERROR)

set (CMAKE_CXX_STANDARD 14)
project (forge)

set(CMAKE_MACOSX_RPATH 1)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_EXTENSIONS False)
set(CMAKE_INSTALL_RPATH ${LIBRARY_LINK_PREFIX})
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
set(CMAKE_CXX_FLAGS "-O3")
include(GNUInstallDirs)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})

#find_library(HTSLIB_LIBRARIES hts HINTS ${LIBRARY_LINK_PREFIX})
#find_library(TBB_IMPORTED_TARGETS tbb HINTS ${LIBRARY_LINK_PREFIX})
#find_library(ZLIB_LIBRARIES z HINTS ${LIBRARY_LINK_PREFIX})

message("LIBRARY_LINK_PREFIX : " ${LIBRARY_LINK_PREFIX})

include_directories(${INCLUDE_LIBRARY_PREFIX})

message("INCLUDE_LIBRARY_PREFIX : " ${INCLUDE_LIBRARY_PREFIX})

enable_testing()

add_subdirectory(src)

option(BUILD_TESTS "Build test" OFF)
if(BUILD_TESTS)
    add_subdirectory(test)
endif(BUILD_TESTS)